--- a/www/index.html
+++ b/www/index.html
@@ -251,7 +251,7 @@
                                                             
                                                             <div id="uploadMessage">
                                                                 <span class="icon-cloud-upload"></span>
-                                                                <p>For best results upload over a strong internet connection</p>
+                                                                <p id="uploadMessageText"></p>
                                                             </div>
 
 
