--- a/www/index.html
+++ b/www/index.html
@@ -186,9 +186,9 @@
                                                 <div  id="androidVideoAlert" class="row" style="display:none;">
                                                         <div class="grid twelve box">
 
-                                                            <div class="icon-warning"></div>
+                                                            <!-- <div class="icon-warning"></div> -->
 
-                                                            <h3>When you record your video response please lower the recording quality setting on you device. This will help speed up the upload process.</h3>
+                                                            <h3>When you record your video response please lower the recording resolution setting on your device.  This will help speed up the upload process.</h3>
                                                             <hr>
                                                             <div class="row">
                                                                 <div class="grid one">
