--- a/www/index.html
+++ b/www/index.html
@@ -36,7 +36,7 @@
                 <a><p>Tap here to close.</p></a>
             </div>
 
-            <div class="row nav-bottom" id="bottom-nav" ng-click="testTrans()">
+            <div class="row nav-bottom" id="bottom-nav">
 
                 <ul id="global-controls">
                     <li class="grid icon-user" ng-class="getFooterSectionClass()" ng-click="openUserPanel()">
