--- a/www/index.html
+++ b/www/index.html
@@ -246,7 +246,7 @@
 
                                                             <textarea id="messageText" class="grid twelve" ng-change="checkMessage()" ng-model="messageText" placeholder="Add your text here..."></textarea>
 
-                                                            <div style="width:100%; text-align:center"><img class="grid twelve" id="preview" /></div>
+                                                            <div style="width:100%; text-align:center; display: inline-block;"><img class="grid twelve" id="preview" /></div>
 
                                                             
                                                             <div id="uploadMessage">
