--- a/www/index.html
+++ b/www/index.html
@@ -22,7 +22,7 @@
 <body onload="onDeviceReady()">
         <div id="tts-app" class="wrapper" ng-app="App" ng-controller="Ctrl">
 
-            <div style="font-size:12px; display:block; position:fixed; top:10px; z-index:99999; padding-bottom:5px; padding-left:5px; width:100%, text-align:center" id="trace">...</div>
+            <div style="font-size:12px; display:none; position:fixed; top:10px; z-index:99999; padding-bottom:5px; padding-left:5px; width:100%, text-align:center" id="trace"></div>
 
             <div class="row nav-top">
                 <div class="grid three pull" ng-click="goBack()" ng-show="showBack">Back</div>    
@@ -351,17 +351,22 @@
 
                             <img ng-src="{{user_userProfile}}" />
                             <hr>
+                            <p>Version 1.2.0</p>
+                            <hr>
+
                             <button class="buttonStyle btn-tertiary" ng-click="openUserPanel()">Close</button>
 
                             <!-- <button id="debugButton" class="buttonStyle btn-primary" onclick="submitDebug()">Submit Debug Report</button> -->
 
-                            <div  style="font-size:12px; display:block" id="debug">Debug</div>
+                            <div  style="font-size:12px; display:none" id="debug">Debug</div>
                             <hr>
-                            <div  style="font-size:12px; display:block" id="fileURL">fileURL</div>
-                            <div  style="font-size:12px; display:block" id="fileType">fileType</div>
-                            <div  style="font-size:12px; display:block" id="fileName">fileName</div>
-                            <div  style="font-size:12px; display:block" id="fileSize">fileSize</div>
-                            <div  style="font-size:12px; display:block" id="platform">platform</div>
+                            <div  style="font-size:12px; display:none" id="fileURL">fileURL</div>
+                            <div  style="font-size:12px; display:none" id="fileType">fileType</div>
+                            <div  style="font-size:12px; display:none" id="fileName">fileName</div>
+                            <div  style="font-size:12px; display:none" id="fileSize">fileSize</div>
+                            <div  style="font-size:12px; display:none" id="platform">platform</div>
+
+                           
 
                         </div>
                     </div>
