--- a/www/index.html
+++ b/www/index.html
@@ -351,15 +351,13 @@
 
                             <img ng-src="{{user_userProfile}}" />
                             <hr>
-                            <p>Version 1.2.0</p>
-                            <hr>
-
                             <button class="buttonStyle btn-tertiary" ng-click="openUserPanel()">Close</button>
+
+                            <p style="font-size: 14px; color: #999; margin-top: 50px;">Version 1.2.0</p>
 
                             <!-- <button id="debugButton" class="buttonStyle btn-primary" onclick="submitDebug()">Submit Debug Report</button> -->
 
                             <div  style="font-size:12px; display:none" id="debug">Debug</div>
-                            <hr>
                             <div  style="font-size:12px; display:none" id="fileURL">fileURL</div>
                             <div  style="font-size:12px; display:none" id="fileType">fileType</div>
                             <div  style="font-size:12px; display:none" id="fileName">fileName</div>
