--- a/www/index.html
+++ b/www/index.html
@@ -363,12 +363,12 @@
 
                             <!-- <button id="debugButton" class="buttonStyle btn-primary" onclick="submitDebug()">Submit Debug Report</button> -->
 
-                            <div  style="font-size:12px; display:none" id="debug">Debug</div>
-                            <div  style="font-size:12px; display:none" id="fileURL">fileURL</div>
-                            <div  style="font-size:12px; display:none" id="fileType">fileType</div>
-                            <div  style="font-size:12px; display:none" id="fileName">fileName</div>
-                            <div  style="font-size:12px; display:none" id="fileSize">fileSize</div>
-                            <div  style="font-size:12px; display:none" id="platform">platform</div>
+                            <div  style="font-size:12px; display:block" id="debug">Debug</div>
+                            <div  style="font-size:12px; display:block" id="fileURL">fileURL</div>
+                            <div  style="font-size:12px; display:block" id="fileType">fileType</div>
+                            <div  style="font-size:12px; display:block" id="fileName">fileName</div>
+                            <div  style="font-size:12px; display:block" id="fileSize">fileSize</div>
+                            <div  style="font-size:12px; display:block" id="platform">platform</div>
 
                            
 
