--- a/www/index.html
+++ b/www/index.html
@@ -358,7 +358,7 @@
                             <hr>
                             <button class="buttonStyle btn-tertiary" ng-click="openUserPanel()">Close</button>
 
-                            <p style="font-size: 14px; color: #999; margin-top: 50px;">Version 1.2.0</p>
+                            <p style="font-size: 14px; color: #999; margin-top: 50px;">Version 1.3.0</p>
 
                             <!-- <button id="debugButton" class="buttonStyle btn-primary" onclick="submitDebug()">Submit Debug Report</button> -->
 
@@ -368,7 +368,7 @@
                             <div  style="font-size:12px; display:block" >fileType: <span id="fileType"></span></div>
                             <div  style="font-size:12px; display:block" >fileName: <span id="fileName"></span></div>
                             <div  style="font-size:12px; display:block" >fileSize: <span id="fileSize"></span></div>
-                            <div  style="font-size:12px; display:block" >platform: <span id="platform">></span></div>
+                            <div  style="font-size:12px; display:block" >platform: <span id="platform"></span></div>
 
                         </div>
                     </div>
