--- a/www/index.html
+++ b/www/index.html
@@ -236,7 +236,7 @@
                                                 <div id="respondScreen">
 
                                                     <div class="grid twelve box">
-                                                        <p id="introMessage" class="light-text">{{uploadMessage}}</p>
+                                                        <p id="introMessage" class="light-text">{{weHaveMedia}} - {{uploadMessage}}</p>
                                                     <div>
 
                                                     
