--- a/www/index.html
+++ b/www/index.html
@@ -259,7 +259,7 @@
                                                                 <p>Sorry this file is too large.<br> Please lower your camera resolution and record again</p>
                                                             </div>
 
-                                                            <p class="light-text" style="margin-top: 10px;" id="landscapePrompt">Please take photos and videos in landscape mode</p>
+                                                            <p id="landscapePrompt">Please take photos and videos in landscape mode</p>
 
                                                             <div id="androidMediaButtons">
                                                                 
