--- a/www/index.html
+++ b/www/index.html
@@ -129,7 +129,7 @@
                                         </div>
 
                                         <div ng-show="introMediaImage(messageData[0].media[0].type)" ng-repeat="image in messageData[0].media">
-                                            <img class="row modIntroImage" ng-src="{{getMediaURL(0, image.media, image.type)}}"/>
+                                            <img class="row modIntroImage" ng-src="{{getTTSImage(image.media)}}"/>
                                         </div>
 
                                         <div class="divider"></div>
@@ -362,17 +362,17 @@
                             <hr>
                             <button class="buttonStyle btn-tertiary" ng-click="openUserPanel()">Close</button>
 
-                            <p style="font-size: 14px; color: #999; margin-top: 50px;">Version 1.3.0</p>
+                            <p style="font-size: 14px; color: #999; margin-top: 50px;">Version 1.4.0</p>
 
                             <!-- <button id="debugButton" class="buttonStyle btn-primary" onclick="submitDebug()">Submit Debug Report</button> -->
 
-                            <div  style="font-size:12px; display:block; word-wrap: break-word;" id="debug">Debug</div>
+                            <div  style="font-size:12px; display:none; word-wrap: break-word;" id="debug">Debug</div>
                             <hr>
-                            <div  style="font-size:12px; display:block" >fileURL: <span id="fileURL"></span></div>
-                            <div  style="font-size:12px; display:block" >fileType: <span id="fileType"></span></div>
-                            <div  style="font-size:12px; display:block" >fileName: <span id="fileName"></span></div>
-                            <div  style="font-size:12px; display:block" >fileSize: <span id="fileSize"></span></div>
-                            <div  style="font-size:12px; display:block" >platform: <span id="platform"></span></div>
+                            <div  style="font-size:12px; display:none" >fileURL: <span id="fileURL"></span></div>
+                            <div  style="font-size:12px; display:none" >fileType: <span id="fileType"></span></div>
+                            <div  style="font-size:12px; display:none" >fileName: <span id="fileName"></span></div>
+                            <div  style="font-size:12px; display:none" >fileSize: <span id="fileSize"></span></div>
+                            <div  style="font-size:12px; display:none" >platform: <span id="platform"></span></div>
 
                         </div>
                     </div>
