--- a/www/index.html
+++ b/www/index.html
@@ -406,7 +406,7 @@
                         <div id="angularVideo"></div>
 
                         <button ng-click="closeVideoViewer()" id="removeMedia" class="buttonStyle btn-tertiary" ng-click="removeMedia()">Close Video</button>
-
+                        <p style="word-break: break-word;" id="TTSVideoSource"></p>
                     </div>
                         
                 </div>
