--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -29,7 +29,7 @@
             * Disables use of inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
                 * Enable inline JS: add 'unsafe-inline' to default-src
         -->
-        <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src * data: content:;">
+        <meta http-equiv="Content-Security-Policy" content="default-src * data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src https: data: content:;">
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
@@ -38,7 +38,7 @@
         <title>Hello World</title>
     </head>
     <body>
-      <p>v3</p>
+      <p>v4</p>
       <img style="float:left; width:25%" src="https://vm0.co/tts/imgTest1.jpg">
       <textarea type="text" style="width:100%; height:200px;" id="trace"></textarea>
         <script src="cordova.js"></script>
