--- a/www/index.html
+++ b/www/index.html
@@ -41,10 +41,11 @@
         <title>Hello World</title>
     </head>
     <body>
-      <p>v9</p>
+      <p>v10</p>
       <img style="float:left; width:25%" src="https://vm0.co/tts/imgTest1.jpg">
       <textarea type="text" style="width:100%; height:200px;" id="trace"></textarea>
         <script src="cordova.js"></script>
+        <script src="js/jquery-2.1.4.min.js"></script>
         <script src="js/index.js"></script>
     </body>
 </html>
