--- a/www/index.html
+++ b/www/index.html
@@ -31,6 +31,7 @@
         -->
 
         <!-- <meta http-equiv="Content-Security-Policy" content="default-src *; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'; media-src *; img-src * filesystem: data:"> -->
+        
         <meta http-equiv="Content-Security-Policy" content="default-src *; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'; media-src *; img-src * filesystem: data:">
 
         <meta name="format-detection" content="telephone=no">
@@ -41,9 +42,11 @@
         <title>Hello World</title>
     </head>
     <body>
-      <p>v11</p>
+      <p>v14</p>
       <img style="float:left; width:25%" src="https://vm0.co/tts/imgTest1.jpg">
       <textarea type="text" style="width:100%; height:200px;" id="trace"></textarea>
+
+      <button onclick="doRequest()" style="width:100%">Submit</button>
         <script src="cordova.js"></script>
         <script src="js/jquery-2.1.4.min.js"></script>
         <script src="js/index.js"></script>
