--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -31,7 +31,6 @@
         -->
 
         <!-- <meta http-equiv="Content-Security-Policy" content="default-src *; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'; media-src *; img-src * filesystem: data:"> -->
-        
         <meta http-equiv="Content-Security-Policy" content="default-src *; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'; media-src *; img-src * filesystem: data:">
 
         <meta name="format-detection" content="telephone=no">
@@ -42,8 +41,10 @@
         <title>Hello World</title>
     </head>
     <body>
-      <p>v14</p>
+      <p>v15</p>
       <img style="float:left; width:25%" src="https://vm0.co/tts/imgTest1.jpg">
+      <img style="float:left; width:25%" src="https://elm-cottage.com/test/imgTest1.jpg">
+      <img style="float:left; width:25%" src="https://discover.thethinkingshed.com/images/header/thinkingshed.gif">
       <textarea type="text" style="width:100%; height:200px;" id="trace"></textarea>
 
       <button onclick="doRequest()" style="width:100%">Submit</button>
