--- a/www/index.html
+++ b/www/index.html
@@ -41,8 +41,8 @@
         <title>Hello World</title>
     </head>
     <body>
-      <p>v15</p>
-      <img style="float:left; width:25%" src="https://vm0.co/tts/imgTest1.jpg">
+      <p>v16</p>
+      <img style="float:left; width:25%" src="http://52.208.220.223/vm0.co/tts/imgTest1.jpg">
       <img style="float:left; width:25%" src="https://elm-cottage.com/test/imgTest1.jpg">
       <img style="float:left; width:25%" src="https://discover.thethinkingshed.com/images/header/thinkingshed.gif">
       <textarea type="text" style="width:100%; height:200px;" id="trace"></textarea>
